# environment-scripts

./: .gitignore  .gitmodules  README.md  pyproject.toml
python/: _common.py  _config.py  build_packages.py  create_venv.py  install_projects.py  install_uv.py  setup_dev_environment.py  setup_pipeline_environment.py
src/: __main__.py  core.py  utils.py
